--- a/nodejs_template/package.json
+++ b/nodejs_template/package.json
@@ -4,11 +4,15 @@
   "main": "app.js",
   "dependencies": {
     "axios": "^0.27.2",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-mysql-session": "^2.1.8",
+    "express-rate-limit": "^6.5.1",
     "express-session": "^1.17.3",
+    "helmet": "^5.1.1",
     "joi": "^17.6.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
@@ -19,7 +23,9 @@
     "request": "^2.88.2",
     "sequelize-auto": "^0.8.8",
     "winston": "^3.8.1",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "xss": "^1.0.13",
+    "xss-clean": "^0.1.1"
   },
   "scripts": {
     "start": "nodemon ./bin/www.js",
